<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		11
	 *	@date 		0
	 *	@title 		11
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.2.8.xd
	 *
	 */
	-->
	<ScrollView android:id="@+id/11" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="896dp" >

			<View android:id="@+id/_bg___11"
				android:background="@drawable/_bg___11_shape"
				 android:layout_marginLeft="0dp"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="414dp"
				android:layout_height="896dp" />

			<ImageView android:id="@+id/background_mask"
				android:src="@drawable/background_mask"
				android:contentDescription="background_mask"
				 android:layout_marginLeft="3396dp"
				 android:layout_marginStart="3396dp"
				android:layout_marginTop="-330dp"
				android:layout_width="414dp"
				android:layout_height="896dp" />

			<ImageView android:id="@+id/path_1334"
				android:src="@drawable/path_1334"
				android:contentDescription="path_1334"
				 android:layout_marginLeft="3208.4765625dp"
				 android:layout_marginStart="3208.4765625dp"
				android:layout_marginTop="-388.00012207031dp"
				android:layout_width="753.04663085938dp"
				android:layout_height="645.71447753906dp" />


			<RelativeLayout android:id="@+id/status_bar"
				android:layout_marginTop="16dp"
				android:layout_marginStart="3432dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>


				<RelativeLayout android:id="@+id/battery"
					android:layout_marginTop="-0dp"
					android:layout_marginStart="317dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/border"
						android:src="@drawable/border"
						android:contentDescription="border"
						 android:layout_marginLeft="0dp"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="22dp"
						android:layout_height="11.333340644836dp" />

					<ImageView android:id="@+id/cap"
						android:src="@drawable/cap"
						android:contentDescription="cap"
						 android:layout_marginLeft="23dp"
						 android:layout_marginStart="23dp"
						android:layout_marginTop="4dp"
						android:layout_width="1.328125dp"
						android:layout_height="4dp" />

					<ImageView android:id="@+id/capacity"
						android:src="@drawable/capacity"
						android:contentDescription="capacity"
						 android:layout_marginLeft="2dp"
						 android:layout_marginStart="2dp"
						android:layout_marginTop="2dp"
						android:layout_width="18dp"
						android:layout_height="7.3333396911621dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/wifi"
					android:layout_marginTop="-0dp"
					android:layout_marginStart="297dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/wifi_ek1"
						android:src="@drawable/wifi_ek1"
						android:contentDescription="wifi_ek1"
						 android:layout_marginLeft="0dp"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="15.2724609375dp"
						android:layout_height="10.965565681458dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/cellular_connection"
					android:layout_marginTop="-0dp"
					android:layout_marginStart="275dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/cellular_connection_ek1"
						android:src="@drawable/cellular_connection_ek1"
						android:contentDescription="cellular_connection_ek1"
						 android:layout_marginLeft="0dp"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="17dp"
						android:layout_height="10.666661262512dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/bars___time_black"
					android:layout_marginTop="1dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/___time"
						android:src="@drawable/___time"
						android:contentDescription="___time"
						 android:layout_marginLeft="0dp"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="27.451171875dp"
						android:layout_height="10.349609375dp" />

				</RelativeLayout>

			</RelativeLayout>

			<View android:id="@+id/marius_ciocirlan_398931_unsplash"
				android:background="@drawable/marius_ciocirlan_398931_unsplash_shape"
				 android:layout_marginLeft="3432dp"
				 android:layout_marginStart="3432dp"
				android:layout_marginTop="84dp"
				android:layout_width="50dp"
				android:layout_height="50dp" />

			<ImageView android:id="@+id/union"
				android:src="@drawable/union"
				android:contentDescription="union"
				 android:layout_marginLeft="3449dp"
				 android:layout_marginStart="3449dp"
				android:layout_marginTop="102dp"
				android:layout_width="16.00048828125dp"
				android:layout_height="13.510345458984dp" />

			<ImageView android:id="@+id/micah_296507_unsplash"
				android:src="@drawable/micah_296507_unsplash"
				android:contentDescription="micah_296507_unsplash"
				 android:layout_marginLeft="3511dp"
				 android:layout_marginStart="3511dp"
				android:layout_marginTop="154dp"
				android:layout_width="184dp"
				android:layout_height="184dp" />

			<TextView android:id="@+id/mark__how_is_your_trip_"
				android:fontFamily="Poppins"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="12sp"
				android:textColor="@color/mark__how_is_your_trip__color"
				android:layout_marginLeft="3500dp"
				android:layout_marginTop="573dp"
				android:layout_width="207dp"
				android:layout_height="51dp"
				android:text="@string/mark__how_is_your_trip__string"
				 />


			<RelativeLayout android:id="@+id/group_9603"
				android:layout_marginTop="652.5dp"
				android:layout_marginStart="3463dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<ImageView android:id="@+id/star"
					android:src="@drawable/star"
					android:contentDescription="star"
					 android:layout_marginLeft="-0dp"
					 android:layout_marginStart="-0dp"
					android:layout_marginTop="-0dp"
					android:layout_width="40.21435546875dp"
					android:layout_height="40.211547851562dp" />

				<ImageView android:id="@+id/star_ek1"
					android:src="@drawable/star_ek1"
					android:contentDescription="star_ek1"
					 android:layout_marginLeft="60dp"
					 android:layout_marginStart="60dp"
					android:layout_marginTop="-0dp"
					android:layout_width="40.21435546875dp"
					android:layout_height="40.211547851562dp" />

				<ImageView android:id="@+id/star_ek2"
					android:src="@drawable/star_ek2"
					android:contentDescription="star_ek2"
					 android:layout_marginLeft="120dp"
					 android:layout_marginStart="120dp"
					android:layout_marginTop="-0dp"
					android:layout_width="40.21435546875dp"
					android:layout_height="40.211547851562dp" />

				<ImageView android:id="@+id/star_ek3"
					android:src="@drawable/star_ek3"
					android:contentDescription="star_ek3"
					 android:layout_marginLeft="180dp"
					 android:layout_marginStart="180dp"
					android:layout_marginTop="-0dp"
					android:layout_width="40.21435546875dp"
					android:layout_height="40.211547851562dp" />

				<ImageView android:id="@+id/star_ek4"
					android:src="@drawable/star_ek4"
					android:contentDescription="star_ek4"
					 android:layout_marginLeft="240dp"
					 android:layout_marginStart="240dp"
					android:layout_marginTop="-0dp"
					android:layout_width="40.21435546875dp"
					android:layout_height="40.211547851562dp" />

			</RelativeLayout>

			<TextView android:id="@+id/you_are_in_place_"
				android:fontFamily="Poppins"
				android:textSize="12sp"
				android:textColor="@color/you_are_in_place__color"
				android:layout_marginLeft="3502dp"
				android:layout_marginTop="93dp"
				android:layout_width="211dp"
				android:layout_height="35dp"
				android:text="@string/you_are_in_place__string"
				 />

			<TextView android:id="@+id/your_driver__wasilij_smith"
				android:fontFamily="Poppins"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="12sp"
				android:textColor="@color/mark__how_is_your_trip__color"
				android:layout_marginLeft="3524dp"
				android:layout_marginTop="354dp"
				android:layout_width="159dp"
				android:layout_height="55dp"
				android:text="@string/your_driver__wasilij_smith_string"
				 />

			<TextView android:id="@+id/distance__15_km"
				android:fontFamily="Poppins"
				android:textSize="12sp"
				android:textColor="@color/mark__how_is_your_trip__color"
				android:layout_marginLeft="3696dp"
				android:layout_marginTop="466dp"
				android:layout_width="69dp"
				android:layout_height="48dp"
				android:text="@string/distance__15_km_string"
				 />

			<TextView android:id="@+id/time__15_min"
				android:fontFamily="Poppins"
				android:textSize="12sp"
				android:textColor="@color/mark__how_is_your_trip__color"
				android:layout_marginLeft="3432dp"
				android:layout_marginTop="466dp"
				android:layout_width="64dp"
				android:layout_height="48dp"
				android:text="@string/time__15_min_string"
				 />

			<TextView android:id="@+id/price___9_99"
				android:fontFamily="Poppins"
				android:textSize="12sp"
				android:textColor="@color/mark__how_is_your_trip__color"
				android:layout_marginLeft="3578dp"
				android:layout_marginTop="466dp"
				android:layout_width="55dp"
				android:layout_height="48dp"
				android:text="@string/price___9_99_string"
				 />

			<View android:id="@+id/divider"
				android:background="@drawable/divider_shape"
				 android:layout_marginLeft="3396dp"
				 android:layout_marginStart="3396dp"
				android:layout_marginTop="436dp"
				android:layout_width="414dp"
				android:layout_height="1dp" />

			<View android:id="@+id/divider_ek1"
				android:background="@drawable/divider_ek1_shape"
				 android:layout_marginLeft="3396dp"
				 android:layout_marginStart="3396dp"
				android:layout_marginTop="542dp"
				android:layout_width="414dp"
				android:layout_height="1dp" />

			<View android:id="@+id/bg"
				android:background="@drawable/bg_shape"
				 android:layout_marginLeft="3432dp"
				 android:layout_marginStart="3432dp"
				android:layout_marginTop="724dp"
				android:layout_width="342dp"
				android:layout_height="88dp" />

			<TextView android:id="@+id/additional_comment"
				android:fontFamily="Poppins"
				android:textSize="12sp"
				android:textColor="@color/additional_comment_color"
				android:layout_marginLeft="3452dp"
				android:layout_marginTop="744dp"
				android:layout_width="127dp"
				android:layout_height="19dp"
				android:text="@string/additional_comment_string"
				 />


			<RelativeLayout android:id="@+id/group_9605"
				android:layout_marginTop="832dp"
				android:layout_marginStart="3729dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>


				<RelativeLayout android:id="@+id/group_9594"
					android:layout_marginTop="0dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View android:id="@+id/marius_ciocirlan_398931_unsplash_ek1"
						android:background="@drawable/marius_ciocirlan_398931_unsplash_ek1_shape"
						 android:layout_marginLeft="0dp"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="45dp"
						android:layout_height="45dp" />

					<ImageView android:id="@+id/union_ek1"
						android:src="@drawable/union_ek1"
						android:contentDescription="union_ek1"
						 android:layout_marginLeft="16dp"
						 android:layout_marginStart="16dp"
						android:layout_marginTop="17dp"
						android:layout_width="12.9365234375dp"
						android:layout_height="10.923522949219dp" />

				</RelativeLayout>

			</RelativeLayout>

			<TextView android:id="@+id/submit"
				android:fontFamily="Poppins"
				android:textSize="18sp"
				android:textColor="@color/submit_color"
				android:layout_marginLeft="3652dp"
				android:layout_marginTop="842dp"
				android:layout_width="72dp"
				android:layout_height="29dp"
				android:text="@string/submit_string"
				 />

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>